<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.generativelayers</groupId>
    <artifactId>generative-layers-core</artifactId>
    <version>0.2.0</version>
    <packaging>jar</packaging>

    <name>Generative Layers Core</name>
    <description>
        Generative Resource Layer framework for BDI agents: governance kernel,
        generative body affordance model, provider registry (Gemini, OpenAI),
        and platform adapters (ASTRA, Jason, JaCaMo).
    </description>
    <url>https://www.generativelayers.com</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Dimitrios Kyriakidis</name>
            <url>https://github.com/generativelayers</url>
        </developer>
    </developers>

    <organization>
        <name>Generative Layers</name>
        <url>https://github.com/generativelayers</url>
    </organization>

    <scm>
        <url>https://github.com/generativelayers/framework</url>
        <connection>scm:git:git://github.com/generativelayers/framework.git</connection>
        <developerConnection>scm:git:git@github.com:generativelayers/framework.git</developerConnection>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <astra.version>2.0.12</astra.version>
    </properties>

    <repositories>
        <repository>
            <id>jacamo-mvn-repo</id>
            <url>https://raw.githubusercontent.com/jacamo-lang/mvn-repo/master</url>
        </repository>
    </repositories>

    <dependencies>
        <!--
          ASTRA — provided scope: compiles the ASTRA adapter but does NOT
          force ASTRA on consumers who don't need it.
          Available on Maven Central (com.astralanguage).
        -->
        <dependency>
            <groupId>com.astralanguage</groupId>
            <artifactId>astra-apis</artifactId>
            <version>${astra.version}</version>
            <scope>provided</scope>
        </dependency>
        <!--
          Jason — provided scope: compiles the Jason adapter but does NOT
          force Jason on consumers who don't need it.
          Available on Maven Central (io.github.jason-lang).
        -->
        <dependency>
            <groupId>io.github.jason-lang</groupId>
            <artifactId>jason-interpreter</artifactId>
            <version>3.2.0</version>
            <scope>provided</scope>
        </dependency>
        <!--
          CArtAgO — provided scope: compiles the JaCaMo adapter but does NOT
          force CArtAgO on consumers who don't need it.
          NOT on Maven Central — requires jacamo-mvn-repo above.
        -->
        <dependency>
            <groupId>org.jacamo</groupId>
            <artifactId>cartago</artifactId>
            <version>2.5-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.4</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Flatten POM for Central: strips provided/test deps (removes cartago SNAPSHOT) -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.6.0</version>
                <configuration>
                    <flattenMode>ossrh</flattenMode>
                    <flattenDependencyMode>all</flattenDependencyMode>
                    <pomElements>
                        <dependencies>remove</dependencies>
                        <repositories>remove</repositories>
                    </pomElements>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals><goal>flatten</goal></goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals><goal>clean</goal></goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.1</version>
            </plugin>
            <!-- Source JAR (required by Maven Central) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals><goal>jar-no-fork</goal></goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Javadoc JAR (required by Maven Central) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>
                <configuration>
                    <failOnError>false</failOnError>
                    <doclint>none</doclint>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals><goal>jar</goal></goals>
                    </execution>
                </executions>
            </plugin>
            <!-- GPG signing (required by Maven Central) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.2.7</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals><goal>sign</goal></goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Sonatype Central deployment -->
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.7.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
